--- a/src/app/web/routes/public/app-athlet-register/success-dialog.component.html
+++ b/src/app/web/routes/public/app-athlet-register/success-dialog.component.html
@@ -8,5 +8,5 @@
     <button mat-button mat-flat-button
             color="primary"
             [routerLink]="['public','competition', data.competition.id]">Список атлетов</button>
-    <button mat-button mat-flat-button cdkFocusInitial (click)="closeDialog()">Закрыть</button>
+    <button mat-button mat-flat-button cdkFocusInitial (click)="closeDialog()" class="bg-white">Закрыть</button>
 </div>
