--- a/src/app/web/theme/admin-layout/admin-layout.component.html
+++ b/src/app/web/theme/admin-layout/admin-layout.component.html
@@ -1,4 +1,4 @@
-<div class="matero-container-wrap matero-header-white"
+<div class="matero-container-wrap matero-header-tns"
      dir="ltr"
      [ngClass]="{'matero-sidenav-collapsed': sidenavCollapsed}">
   <ng-progress></ng-progress>
