--- a/src/app/web/routes/results/results.component.html
+++ b/src/app/web/routes/results/results.component.html
@@ -1,93 +1,106 @@
-<h2>
-    <csv [data]="getCsvData(dataSource.filteredData)"
-         [filename]="classes.join('_') + '_' + (this.now|date:'dd-MM-yy_HH:mm:ss')"
-         [options]="csv_export_options">
-        <a mat-icon-button color="warn">
-            <mat-icon [matTooltip]="'Скачать таблицу в формате CSV'">get_app</mat-icon>
-        </a>
-    </csv>
-    Время старта: {{ start_time.toDate()|date:"yyyy-dd-MM HH:mm:ss z":getTzOffset(competition.timezone) }}
-</h2>
+<mat-card style="overflow: hidden">
+    <mat-card-header>
+        <mat-card-title>Результаты сорвенования</mat-card-title>
+        <mat-card-subtitle>
+            {{ start_time.toDate()|date:"yyyy-dd-MM HH:mm:ss z":getTzOffset(competition.timezone) }}
+        </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <ul class="one-row">
+            <li>
+                <csv [data]="getCsvData(dataSource.filteredData)"
+                     [filename]="classes.join('_') + '_' + (this.now|date:'dd-MM-yy_HH:mm:ss')"
+                     [options]="csv_export_options">
+                    <a mat-fab class="bg-teal-400">
+                        <mat-icon>get_app</mat-icon>
+                    </a>
+                    Скачать таблицу в формате CSV
+                </csv>
+            </li>
+        </ul>
+        <mat-card>
+            <mat-card-content fxLayout="row wrap">
+                <mat-form-field class="m-b-24">
+                    <input matInput (keyup)="applyFilter($event, 'str')" placeholder="Фильтр">
+                    <mat-hint>По фамилии или номеру участника</mat-hint>
+                </mat-form-field>
+            </mat-card-content>
+        </mat-card>
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-<mat-form-field class="m-b-24">
-    <input matInput (keyup)="applyFilter($event, 'str')" placeholder="Фильтр">
-    <mat-hint>По фамилии или номеру участника</mat-hint>
-</mat-form-field>
+                <ng-container *ngIf="!hide_place" matColumnDef="place">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Place</th>
+                    <td mat-cell *matCellDef="let element"
+                        [class.highlight]="element.place <= 3"> {{ element.place }} </td>
+                </ng-container>
 
+                <ng-container matColumnDef="number">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
+                    <td mat-cell *matCellDef="let element"><b>{{element.number}}</b></td>
+                </ng-container>
 
-<div class="table-container">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                <ng-container matColumnDef="class">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Class</th>
+                    <td mat-cell *matCellDef="let element"> {{element.athlet.class}} </td>
+                </ng-container>
 
-        <ng-container *ngIf="!hide_place" matColumnDef="place">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Place</th>
-            <td mat-cell *matCellDef="let element"
-                [class.highlight]="element.place <= 3"> {{ element.place }} </td>
-        </ng-container>
+                <ng-container matColumnDef="athlet">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Athlet</th>
+                    <td mat-cell *matCellDef="let element" class="athlet">
+                        <ul>
+                            <li [ngSwitch]="is_admin">
+                                <a *ngSwitchCase="true"
+                                   [routerLink]="['detail', element.athlet.phone]">{{element.athlet.fio}}</a>
+                                <span *ngSwitchDefault>{{element.athlet.fio}}</span>
+                            </li>
+                            <li>
+                                {{element.athlet.nfc_id}}
+                            </li>
+                            <li>
+                                г. {{element.athlet.city}}
+                            </li>
+                            <li [hidden]="!is_admin">
+                                тел. {{element.athlet.phone}}
+                            </li>
+                            <li [hidden]="!is_admin">
+                                moto: {{element.athlet.bike}}
+                            </li>
+                        </ul>
+                    </td>
+                </ng-container>
 
-        <ng-container matColumnDef="number">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
-            <td mat-cell *matCellDef="let element"><b>{{element.number}}</b></td>
-        </ng-container>
+                <ng-container [matColumnDef]="'CP_' + y"
+                              *ngFor="let def of checkpoints; trackBy: trackByIndex; let y = index;">
+                    <th mat-header-cell *matHeaderCellDef class="v-top p-t-2 cp-header">
+                        <div [matTooltip]="def.marshal" [matTooltipDisabled]="!def.marshal">
+                            <small>
+                                {{ def.title || 'CP_' + ((y % this.checkpoints.length) + 1)  }}
+                            </small>
+                        </div>
+                    </th>
+                    <td mat-cell
+                        *matCellDef="let element"
+                        [ngSwitch]="!hide_place ? element.marks[y] : null"
+                        [class.last-cp]="isLastCp(y)">
+                        <div *ngSwitchDefault
+                             [class.active]="element.last_created == element.marks[y].created"
+                             [class.elapsed]="element.marks[y].elapsed" class="p-l-4 p-r-4">
+                            <small>
+                                {{ diffTime(element.marks[y].created) }}
+                            </small>
+                            <small>
+                                {{ element.marks[y].created.toDate()|date:"HH:mm:ss z":getTzOffset(competition.timezone) }}
+                                <br>
+                            </small>
+                        </div>
+                        <span *ngSwitchCase="null">-</span>
+                    </td>
+                </ng-container>
 
-        <ng-container matColumnDef="class">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Class</th>
-            <td mat-cell *matCellDef="let element"> {{element.athlet.class}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="athlet">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Athlet</th>
-            <td mat-cell *matCellDef="let element" class="athlet">
-                <ul>
-                    <li [ngSwitch]="is_admin">
-                        <a *ngSwitchCase="true"
-                           [routerLink]="['detail', element.athlet.phone]">{{element.athlet.fio}}</a>
-                        <span *ngSwitchDefault>{{element.athlet.fio}}</span>
-                    </li>
-                    <li>
-                        {{element.athlet.nfc_id}}
-                    </li>
-                    <li>
-                        г. {{element.athlet.city}}
-                    </li>
-                    <li [hidden]="!is_admin">
-                        тел. {{element.athlet.phone}}
-                    </li>
-                    <li [hidden]="!is_admin">
-                        moto: {{element.athlet.bike}}
-                    </li>
-                </ul>
-            </td>
-        </ng-container>
-
-        <ng-container [matColumnDef]="'CP_' + y"
-                      *ngFor="let def of checkpoints; trackBy: trackByIndex; let y = index;">
-            <th mat-header-cell *matHeaderCellDef class="v-top p-t-2 cp-header">
-                <div [matTooltip]="def.marshal" [matTooltipDisabled]="!def.marshal">
-                    <small>
-                        {{ def.title || 'CP_' + ((y % this.checkpoints.length) + 1)  }}
-                    </small>
-                </div>
-            </th>
-            <td mat-cell
-                *matCellDef="let element"
-                [ngSwitch]="!hide_place ? element.marks[y] : null"
-                [class.last-cp]="isLastCp(y)">
-                <div *ngSwitchDefault
-                     [class.active]="element.last_created == element.marks[y].created"
-                     [class.elapsed]="element.marks[y].elapsed" class="p-l-4 p-r-4">
-                    <small>
-                        {{ diffTime(element.marks[y].created) }}
-                    </small>
-                    <small>
-                        {{ element.marks[y].created.toDate()|date:"HH:mm:ss z":getTzOffset(competition.timezone) }}
-                        <br>
-                    </small>
-                </div>
-                <span *ngSwitchCase="null">-</span>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-</div>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+        </div>
+    </mat-card-content>
+</mat-card>
