--- a/src/app/athlet/athlet.component.tns.html
+++ b/src/app/athlet/athlet.component.tns.html
@@ -41,26 +41,25 @@
         </GridLayout>
     </StackLayout>
 
-    <StackLayout row="2" col="0">
-        <RadListView [items]="athlets|filter:['fio', 'number', 'phone']:{search: searchPhrase}"
-                     height="100%"
-                     class="items">
-            <ng-template tkListItemTemplate let-athlet="item" let-i="index" let-odd="odd" let-even="even">
-                <GridLayout (tap)="onItemTap(athlet)" columns="60, *" rows="*, *, *"
-                            [class.odd]="odd"
-                            [class.even]="even">
-                    <Label [text]="athlet.number" col="0" rowSpan="2"
-                           verticalAlignment="top"
-                           horizontalAlignment="center" class="number"></Label>
-                    <Label [text]="athlet.class" col="0" row="3" class="option" horizontalAlignment="center"></Label>
+    <ListView row="2" col="0"
+              [items]="athlets|filter:['fio', 'number', 'phone']:{search: searchPhrase}"
+              (itemTap)="onItemTap($event)"
+              class="items">
+        <ng-template let-athlet="item" let-i="index" let-odd="odd" let-even="even">
+            <GridLayout columns="60, *" rows="*, *, *"
+                        [class.odd]="odd"
+                        [class.even]="even">
+                <Label [text]="athlet.number" col="0" rowSpan="2"
+                       verticalAlignment="top"
+                       horizontalAlignment="center" class="number"></Label>
+                <Label [text]="athlet.class" col="0" row="3" class="option" horizontalAlignment="center"></Label>
 
-                    <Label [text]="('Name: '|L) + athlet.fio" col="1" row="0" class="option"></Label>
-                    <Label [text]="'NFC: ' + (athlet.nfc_id ? ('assigned'|L) : ('not assigned'|L))" col="1" row="1"
-                           [class.-warning]="!athlet.nfc_id" class="option font-weight-bold"></Label>
-                    <Label [text]="('Passed marks: '|L) + athlet.marks.length" col="1" row="2"
-                           class="font-weight-bold option"></Label>
-                </GridLayout>
-            </ng-template>
-        </RadListView>
-    </StackLayout>
+                <Label [text]="('Name: '|L) + athlet.fio" col="1" row="0" class="option"></Label>
+                <Label [text]="'NFC: ' + (athlet.nfc_id ? ('assigned'|L) : ('not assigned'|L))" col="1" row="1"
+                       [class.-warning]="!athlet.nfc_id" class="option font-weight-bold"></Label>
+                <Label [text]="('Passed marks: '|L) + athlet.marks.length" col="1" row="2"
+                       class="font-weight-bold option"></Label>
+            </GridLayout>
+        </ng-template>
+    </ListView>
 </GridLayout>
