--- a/src/app/scan/scan.component.tns.html
+++ b/src/app/scan/scan.component.tns.html
@@ -27,7 +27,8 @@
                        keyboardType="number"
                        maxLength="3"
                        col="0"
-                       row="0" style="font-size: 30px" class="font-weight-bold text-center"></TextField>
+                       row="0"
+                       class="big-input"></TextField>
             <Button [text]="'Отметить'|L"
                     (tap)="setNumberMark(textField)"
                     [isEnabled]="last_athlet ? true : false" col="1" row="0"></Button>
