--- a/src/app/home/start-list/start-list-add-dialog/start-list-add-dialog.component.tns.html
+++ b/src/app/home/start-list/start-list-add-dialog/start-list-add-dialog.component.tns.html
@@ -6,14 +6,12 @@
             <TextField (textChange)="onSizeChange($event)"
                        [hint]="'Group size'|L"
                        autocorrect="false"
-                       keyboardType="number"></TextField>
+                       keyboardType="number" class="big-input"></TextField>
         </StackLayout>
 
         <StackLayout row="1" sdkToggleNavButton class="font-small">
-            <Button class="btn -active" [text]="'Split athletes by\nspecific group size'|L"
-                    (tap)="onSplitBySize()"></Button>
-            <Button class="btn -active" [text]="'Create groups by\nresults of previous stage'|L"
-                    (tap)="onSplitByStage()"></Button>
+            <Button class="btn -active" [text]="'Split athletes by\nspecific group size'|L" [isEnabled]="!!this.size" (tap)="onSplitBySize()"></Button>
+            <Button class="btn -active" [text]="'Create groups by\nresults of previous stage'|L" [isEnabled]="false" (tap)="onSplitByStage()"></Button>
             <Button class="btn -active" [text]="'Create group'|L" (tap)="onAddGroup()"></Button>
         </StackLayout>
     </GridLayout>
