--- a/src/app/home/start-list/start-list.component.tns.html
+++ b/src/app/home/start-list/start-list.component.tns.html
@@ -1,3 +1,5 @@
-<Tabs [selectedIndex]="tabIndex"
-      (selectedIndexChanged)="onSelectedIndexChanged($event)" #tabs>
-</Tabs>
+<StackLayout>
+    <Tabs [selectedIndex]="tabIndex"
+          (selectedIndexChanged)="onSelectedIndexChanged($event)" #tabs>
+    </Tabs>
+</StackLayout>
