--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -179,3 +179,10 @@ TabStripItem {
   text-align: center;
   font-size: 24px;
 }
+
+.subaction {
+  background-color: #3f51b5;
+  color: white;
+  padding: 20px;
+  font-size: 18px;
+}
