--- a/src/_app-variables.scss
+++ b/src/_app-variables.scss
@@ -1,1 +1,14 @@
 $facebook: #3b5998;
+
+
+$color1: #AEE406;
+$color2:#00CAAB;
+$color3:#5C687C;
+$color4: #c75c5c;
+$color5: #4f5d73;
+$color6: #465062;
+$color7: #e0e0d1;
+$color8: #f3fbda;
+$color9: #d7f283;
+$color10: #737373;
+$color11: #ff5e21;
