--- a/src/app/home/competition/competition.component.tns.html
+++ b/src/app/home/competition/competition.component.tns.html
@@ -3,25 +3,25 @@
     <StackLayout col="0" row="1">
         <app-enter-secret></app-enter-secret>
     </StackLayout>
-    <StackLayout col="0" row="2">
-        <ListView height="100%"
-                  [items]="competitions"
-                  (itemTap)="onItemTap($event)">
-            <ng-template let-competition="item" let-i="index">
-                <GridLayout columns="*, auto, auto" rows="*" [class.active]="selected_competition?.id == competition.id"
-                            class="p-0 m-0">
-                    <Label col="0" [text]="competition.title" horizontalAlignment="left"></Label>
-                    <Label col="1" text="&#xf3cd;" *ngIf="isReader(competition.checkpoints)" class="fas"></Label>
+    <ListView col="0" row="2"
+              [items]="competitions"
+              (itemTap)="onItemTap($event)">
+        <ng-template let-competition="item" let-i="index">
+            <GridLayout columns="*, auto, auto" rows="*" [class.active]="selected_competition?.id == competition.id"
+                        class="p-0 m-0">
+                <Label col="0" [text]="competition.title" horizontalAlignment="left"></Label>
+                <Label col="1" text="&#xf3cd;" *ngIf="isReader(competition.checkpoints)" class="fas"></Label>
 
-                    <Label col="2" [nsRouterLink]="competition.parent_id ? [competition.parent_id, competition.id] : [competition.id]" class="label-detail">
-                        <FormattedString>
-                            <Span [text]="'Detail'|L"></Span>
-                            <Span text="&nbsp;&nbsp;&#xf101;" class="fas"></Span>
-                        </FormattedString>
-                    </Label>
-                </GridLayout>
-            </ng-template>
-        </ListView>
-    </StackLayout>
+                <Label col="2"
+                       [nsRouterLink]="competition.parent_id ? [competition.parent_id, competition.id] : [competition.id]"
+                       class="label-detail">
+                    <FormattedString>
+                        <Span [text]="'Detail'|L"></Span>
+                        <Span text="&nbsp;&nbsp;&#xf101;" class="fas"></Span>
+                    </FormattedString>
+                </Label>
+            </GridLayout>
+        </ng-template>
+    </ListView>
 </GridLayout>
 
