--- a/src/app/start-list/start-list-group/start-list-group.component.tns.html
+++ b/src/app/start-list/start-list-group/start-list-group.component.tns.html
@@ -1,26 +1,57 @@
 <GridLayout rows="auto, auto, *">
-    <GridLayout row="0" columns="auto, *" rows="*,*" class="subAction">
-        <Label [text]="('Group: '|L) + group" row="0" col="0"></Label>
-        <Label [text]="('Selected: '|L) + (activeTab == 'IN_GROUP' ? radItems.length : backupSelected) " row="1" col="0"></Label>
+    <GridLayout rows="auto, auto" columns="*, *, *" row="0" class="subAction">
+        <Label row="0" col="0" colSpan="3">
+            <FormattedString editable="false">
+                <Span [text]="('Group: '|L) + group"></Span>
+                <Span [text]="'&nbsp;&nbsp;' + ('Selected: '|L) + (activeTab == 'IN_GROUP' ? radItems.length : backupSelected)"></Span>
+            </FormattedString>
+        </Label>
 
-        <GridLayout col="1" rowSpan="2" columns="auto, auto" verticalAlignment="center" horizontalAlignment="right" orientation="vertical">
-            <Button [text]="'Delete'|L" (tap)="onDelete()" col="0" class="btn -warning"></Button>
-            <Button [text]="'Save'|L" (tap)="onSave()" col="1" class="btn -primary"></Button>
-        </GridLayout>
+
+        <Button [text]="'Start'|L"
+                (tap)="onStart()"
+                [isEnabled]="(activeTab == 'IN_GROUP' ? radItems.length : backupSelected) > 0"
+                col="0" row="1"
+                class="btn -primary"></Button>
+        <Button [text]="'Delete'|L"
+                (tap)="onDelete()"
+                [isEnabled]="group != _class"
+                col="1" row="1"
+                class="btn -warning"></Button>
+        <Button [text]="'Save'|L" (tap)="onSave()"
+                col="2" row="1"
+                class="btn -aqua"></Button>
+
     </GridLayout>
+
+
+<!--    <GridLayout row="0" columns="auto, *" rows="*,*" class="subAction">-->
+<!--        <Label [text]="('Group: '|L) + group" row="0" col="0"></Label>-->
+<!--        <Label [text]="('Selected: '|L) + (activeTab == 'IN_GROUP' ? radItems.length : backupSelected) " row="1" col="0"></Label>-->
+
+<!--        <GridLayout col="1" rowSpan="2" columns="auto, auto"-->
+<!--                    verticalAlignment="center"-->
+<!--                    horizontalAlignment="right">-->
+<!--            <Button *ngIf="group != _class"-->
+<!--                    [text]="'Delete'|L"-->
+<!--                    (tap)="onDelete()" col="0"-->
+<!--                    class="btn -warning"></Button>-->
+<!--            <Button [text]="'Save'|L" (tap)="onSave()" col="1" class="btn -primary"></Button>-->
+<!--        </GridLayout>-->
+<!--    </GridLayout>-->
 
     <GridLayout row="1" columns="*, *" rows="*" class="gridTabs"
                 androidElevation="3"
                 android:backgroundColor="white">
         <StackLayout col="0" [class.active]="activeTab == 'IN_GROUP'">
-            <Button [text]="'In group'"
+            <Button [text]="'In group'|L"
                     (tap)="onActiveTab('IN_GROUP')"></Button>
             <GridLayout class="barItemBottomBorder"></GridLayout>
         </StackLayout>
 
 
         <StackLayout col="1" [class.active]="activeTab == 'OUT_OF_GROUP'">
-            <Button [text]="'Out of group'"
+            <Button [text]="'Out of group'|L"
                     (tap)="onActiveTab('OUT_OF_GROUP')"></Button>
             <GridLayout class="barItemBottomBorder"></GridLayout>
         </StackLayout>
@@ -49,27 +80,30 @@
                      swipeActions="true">
 
             <ng-template tkListItemTemplate let-athlet="item" let-i="index" let-odd="odd" let-even="even">
+                <StackLayout class="p-0 m-0">
+                    <GridLayout columns="auto, *, auto" class="rad-list" [class.odd]="odd">
+                        <Label col="0" text="&#xf053;" class="fas checking"></Label>
+                        <GridLayout col="1" columns="60, *" rows="*, *, *, *" [class.odd]="odd">
 
-                <GridLayout columns="auto, *, auto" class="rad-list">
-                    <Label col="0" text="&#xf053;" class="fas checking"></Label>
-                    <GridLayout col="1" columns="60, *" rows="*, *, *" [class.odd]="odd">
+                            <Label [text]="athlet.number" col="0" row="0" rowSpan="3" class="number"
+                                   verticalAlignment="center" horizontalAlignment="center"></Label>
 
-                        <Label [text]="athlet.number" col="0" row="0" rowSpan="2" class="number" verticalAlignment="center" horizontalAlignment="center"></Label>
+                            <Label [text]="athlet.class" col="0" row="3" class="option p-r-4 p-l-4"></Label>
 
-                        <Label [text]="athlet.class" col="0" row="2" class="option p-r-4 p-l-4"></Label>
+                            <Label [text]="athlet.fio" col="1" row="0" class="option"></Label>
 
-                        <Label [text]="athlet.fio" col="1" row="0" class="option"></Label>
+                            <Label [text]="'NFC: ' + (athlet.nfc_id ? ('assigned'|L) : ('not assigned'|L))"
+                                   [class.-warning]="!athlet.nfc_id"
+                                   col="1" row="1" class="option"></Label>
+                            <Label [text]="'Group: ' + athlet.group[_competition.selected_competition.id].id"
+                                   col="1" row="2" class="option"></Label>
+                            <Label [text]="'Start time: ' + getStartTime(athlet)"
+                                   col="1" row="3" class="option font-weight-bold"></Label>
 
-                        <Label [text]="'NFC: ' + (athlet.nfc_id ? ('assigned'|L) : ('not assigned'|L))"
-                               [class.-warning]="!athlet.nfc_id"
-                               col="1" row="1" class="option"></Label>
-                        <Label [text]="'Group: ' + athlet.group[_competition.selected_competition.id].id"
-                               col="1" row="2" class="option"></Label>
-
+                        </GridLayout>
+                        <Label col="2" text="&#xf054;" class="fas checking"></Label>
                     </GridLayout>
-                    <Label col="2" text="&#xf054;" class="fas checking"></Label>
-                </GridLayout>
-
+                </StackLayout>
             </ng-template>
 
             <GridLayout *tkListItemSwipeTemplate columns="60, *, 60" rows="auto" class="gridLayoutSwipe"
@@ -80,8 +114,10 @@
                     <Label [text]="activeTab =='IN_GROUP' ? '&#xf503;' : '&#xf4fc;'"
                            class="fas checking" verticalAlignment="center" horizontalAlignment="center"></Label>
                 </GridLayout>
-                <GridLayout id="delete-view" col="2" (tap)="onRightSwipeClick($event)" class="gridLayoutSwipeItem right">
-                    <Label text="&#xf05a;" class="fas checking" verticalAlignment="center" horizontalAlignment="center"></Label>
+                <GridLayout id="delete-view" col="2" (tap)="onRightSwipeClick($event)"
+                            class="gridLayoutSwipeItem right">
+                    <Label text="&#xf05a;" class="fas checking" verticalAlignment="center"
+                           horizontalAlignment="center"></Label>
                 </GridLayout>
             </GridLayout>
 
